Fix quotation text-align style

--- a/css/main.css
+++ b/css/main.css
@@ -412,8 +412,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.5rem;
-  text-align: center; }
+  gap: 2.5rem; }
   .person__image {
     clip-path: circle(50%);
     max-width: 7rem; }
@@ -437,10 +436,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  width: 34rem;
+  min-width: 34rem;
+  padding: 3.6rem;
   background-color: #1f1f1f;
   border-radius: 1rem;
-  padding: 3.6rem; }
+  text-align: center; }
 
 .button {
   display: block;
