--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  width: 34rem;
+
+  min-width: 34rem;
+  padding: 3.6rem;
+
   background-color: $surface;
   border-radius: 1rem;
-  padding: 3.6rem;
+  text-align: center;
 }
