--- a/src/scss/page/_main.scss
+++ b/src/scss/page/_main.scss
@@ -13,7 +13,6 @@
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
-  text-align: center;
 
   &__image {
     clip-path: circle(50%);
